<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.myactivitycity.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_goals"
        android:name="com.example.myactivitycity.ui.goals.GoalsFragment"
        android:label="@string/goals"
        tools:layout="@layout/fragment_goals" />

    <fragment
        android:id="@+id/nav_message"
        android:name="com.example.myactivitycity.ui.message.MessageFragment"
        android:label="@string/self_message"
        tools:layout="@layout/fragment_message" />

    <fragment
        android:id="@+id/nav_schedule"
        android:name="com.example.myactivitycity.ui.schedule.ScheduleFragment"
        android:label="@string/schedule"
        tools:layout="@layout/fragment_schedule" />
</navigation>